base/influxdb/influxdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: influxdb
spec:
  ports:
  - name: port-1
    port: 8086
    protocol: TCP
    targetPort: 8086
  - name: port-2
    port: 8088
    protocol: TCP
    targetPort: 8088
  selector:
    app: influxdb
status:
  loadBalancer: {}
